--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
+		<script
+			src="https://kit.fontawesome.com/2f7b3162f6.js"
+			crossorigin="anonymous"
+		></script>
 		<title>Shopping Cart</title>
 	</head>
 	<body>
